--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Kokoa talk</title>
   </head>
   <body>
-    <div id="status-bar">
-      <div class="status-bar__column"></div>
-      <span>No service</span>
-      <!-- To Do: Wifi Icon -->
-      <div class="status-bar__column"></div>
-      <span>18:43</span>
-      <div class="status-bar__column"></div>
-      <span>110%</span>
-      <!-- Batter Icon -->
-      <!-- Lightning Icon -->
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No service</span>
+        <i class="fa-solid fa-plane-up"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-bolt"></i>
+      </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa talk</h1>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, log in with your email or phone number.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="Email or Phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
+    <script
+      src="https://kit.fontawesome.com/b1af9d57e7.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
