--- a/friends.html
+++ b/friends.html
@@ -37,6 +37,20 @@
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          src="https://cdn.shopify.com/s/files/1/0059/0630/1017/t/5/assets/pf-71d43dc5--keychronk8nonbacklightwirelessmechanicalkeyboard.jpeg?v=1630581160"
+          class="user-component__avatar"
+        />
+        <div class="user-component__text">
+          <h4 class="user-component__title">Oh sebin</h4>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
